router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__subgraph_override.snap
---
source: apollo-router/src/configuration/tests.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2019-09/schema",
  "title": "TestSubgraphOverride",
  "type": "object",
  "required": [
    "subgraph"
  ],
  "properties": {
    "subgraph": {
      "description": "Configuration options pertaining to the subgraph server component.",
      "type": "object",
      "properties": {
        "all": {
          "description": "options applying to all subgraphs",
          "default": {
            "a": false,
            "b": 0
          },
          "type": "object",
          "properties": {
            "a": {
              "default": true,
              "type": "boolean"
            },
            "b": {
              "default": 0,
              "type": "integer",
              "format": "uint8",
              "minimum": 0.0
            }
          }
        },
        "subgraphs": {
          "description": "per subgraph options",
          "default": {},
          "type": "object",
          "additionalProperties": {
            "type": "object",
            "properties": {
              "a": {
                "default": true,
                "type": "boolean"
              },
              "b": {
                "default": 0,
                "type": "integer",
                "format": "uint8",
                "minimum": 0.0
              }
            }
          }
        }
      }
    },
    "value": {
      "type": "integer",
      "format": "uint8",
      "minimum": 0.0,
      "nullable": true
    }
  }
}
