router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@health-check_to_health_check.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
health_check:
  enabled: true

