router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@jaeger_scheduled_delay.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  tracing:
    jaeger:
      agent:
        endpoint: default
      batch_processor:
        scheduled_delay: 100ms
      enabled: true

