router/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@operation-limits-preview.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
limits:
  parser_max_recursion: 1000

